Cleanup and refactoring

--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -107,21 +107,7 @@
          </layout>
         </item>
         <item row="1" column="0">
-         <widget class="QScrollArea" name="imageContainer">
-          <property name="widgetResizable">
-           <bool>false</bool>
-          </property>
-          <widget class="QWidget" name="scrollAreaWidgetContents">
-           <property name="geometry">
-            <rect>
-             <x>0</x>
-             <y>0</y>
-             <width>665</width>
-             <height>190</height>
-            </rect>
-           </property>
-           <layout class="QGridLayout" name="gridLayout"/>
-          </widget>
+         <widget class="ZoomableImage" name="imageContainer">
          </widget>
         </item>
        </layout>
