--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>DSLR Shooter</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout_3">
@@ -25,14 +25,20 @@
         <item row="0" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <item>
-           <widget class="QPushButton" name="zoomOut">
+           <widget class="QToolButton" name="zoomOut">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>-</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QPushButton" name="zoomIn">
+           <widget class="QToolButton" name="zoomIn">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>+</string>
             </property>
@@ -53,6 +59,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="zoomActualSize">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Actual Size</string>
             </property>
@@ -60,6 +69,9 @@
           </item>
           <item>
            <widget class="QPushButton" name="zoomFit">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Fit Window</string>
             </property>
