--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -122,16 +122,19 @@
         </layout>
        </widget>
        <widget class="QToolBox" name="toolBox">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="currentIndex">
-         <number>1</number>
+         <number>0</number>
         </property>
         <widget class="QWidget" name="camera_info_page">
          <property name="geometry">
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>183</width>
-           <height>161</height>
+           <width>219</width>
+           <height>294</height>
           </rect>
          </property>
          <attribute name="label">
@@ -172,15 +175,21 @@
          <attribute name="label">
           <string>Camera Setup</string>
          </attribute>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
-           <widget class="QLabel" name="label">
-            <property name="text">
-             <string>Shoot Mode</string>
+         <layout class="QGridLayout" name="gridLayout_3">
+          <item row="11" column="0">
+           <spacer name="verticalSpacer_3">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
             </property>
-           </widget>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>3</height>
+             </size>
+            </property>
+           </spacer>
           </item>
-          <item>
+          <item row="1" column="0" colspan="2">
            <widget class="QComboBox" name="shoot_mode">
             <item>
              <property name="text">
@@ -194,114 +203,125 @@
             </item>
            </widget>
           </item>
-          <item>
+          <item row="0" column="0" colspan="2">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Shoot Mode</string>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0">
+           <widget class="QSpinBox" name="shoot_interval">
+            <property name="minimum">
+             <number>1</number>
+            </property>
+            <property name="maximum">
+             <number>256</number>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="0" colspan="2">
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>Shoot Interval</string>
             </property>
            </widget>
           </item>
-          <item>
-           <layout class="QHBoxLayout" name="horizontalLayout">
+          <item row="3" column="1">
+           <widget class="QComboBox" name="shoot_interval_unit">
             <item>
-             <widget class="QSpinBox" name="shoot_interval">
-              <property name="minimum">
-               <number>1</number>
-              </property>
-              <property name="maximum">
-               <number>256</number>
-              </property>
-             </widget>
+             <property name="text">
+              <string>Seconds</string>
+             </property>
             </item>
             <item>
-             <widget class="QComboBox" name="shoot_interval_unit">
-              <item>
-               <property name="text">
-                <string>Seconds</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Minutes</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>Hours</string>
-               </property>
-              </item>
-             </widget>
+             <property name="text">
+              <string>Minutes</string>
+             </property>
             </item>
-           </layout>
+            <item>
+             <property name="text">
+              <string>Hours</string>
+             </property>
+            </item>
+           </widget>
           </item>
-          <item>
+          <item row="4" column="0" colspan="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Images to capture</string>
             </property>
            </widget>
           </item>
-          <item>
+          <item row="5" column="0" colspan="2">
            <widget class="QSpinBox" name="images_count">
             <property name="suffix">
              <string> images</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QLabel" name="label_4">
-            <property name="text">
-             <string>Image Format</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QComboBox" name="imageFormat">
-            <property name="enabled">
-             <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item>
+          <item row="9" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>Shutter Speed</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QComboBox" name="shutterSpeed">
-            <property name="enabled">
-             <bool>false</bool>
+          <item row="6" column="0" colspan="2">
+           <widget class="QPushButton" name="imageSettings">
+            <property name="text">
+             <string>Image Settings...</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QLabel" name="label_6">
+          <item row="7" column="0">
+           <widget class="QLabel" name="label_4">
             <property name="text">
              <string>ISO</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QComboBox" name="iso">
-            <property name="enabled">
-             <bool>false</bool>
+          <item row="7" column="1">
+           <widget class="QLabel" name="isoLabel">
+            <property name="text">
+             <string/>
             </property>
            </widget>
           </item>
-          <item>
-           <spacer name="verticalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Vertical</enum>
+          <item row="8" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>Image Format</string>
             </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>20</width>
-              <height>3</height>
-             </size>
+           </widget>
+          </item>
+          <item row="8" column="1">
+           <widget class="QLabel" name="imageFormatLabel">
+            <property name="text">
+             <string/>
             </property>
-           </spacer>
+           </widget>
+          </item>
+          <item row="9" column="1">
+           <widget class="QLabel" name="shutterSpeedLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="0">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>Manual Exposure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="1">
+           <widget class="QLabel" name="manualExposureLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -310,8 +330,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>111</width>
-           <height>66</height>
+           <width>219</width>
+           <height>294</height>
           </rect>
          </property>
          <attribute name="label">
