--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -133,8 +133,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>219</width>
-           <height>294</height>
+           <width>228</width>
+           <height>301</height>
           </rect>
          </property>
          <attribute name="label">
@@ -168,22 +168,29 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>205</width>
-           <height>364</height>
+           <width>214</width>
+           <height>435</height>
           </rect>
          </property>
          <attribute name="label">
           <string>Camera Setup</string>
          </attribute>
          <layout class="QGridLayout" name="gridLayout_3">
-          <item row="11" column="1">
+          <item row="12" column="0">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>Manual Exposure</string>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="1">
            <widget class="QLabel" name="manualExposureLabel">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item row="12" column="0">
+          <item row="13" column="0">
            <spacer name="verticalSpacer_3">
             <property name="orientation">
              <enum>Qt::Vertical</enum>
@@ -253,56 +260,42 @@
             </item>
            </widget>
           </item>
-          <item row="4" column="0" colspan="2">
+          <item row="5" column="0" colspan="2">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>Images to capture</string>
             </property>
            </widget>
           </item>
-          <item row="5" column="0" colspan="2">
+          <item row="6" column="0" colspan="2">
            <widget class="QSpinBox" name="images_count">
             <property name="suffix">
              <string> images</string>
             </property>
            </widget>
           </item>
-          <item row="10" column="0">
+          <item row="11" column="0">
            <widget class="QLabel" name="label_5">
             <property name="text">
              <string>Shutter Speed</string>
             </property>
            </widget>
           </item>
-          <item row="6" column="0" colspan="2">
+          <item row="7" column="0" colspan="2">
            <widget class="QPushButton" name="imageSettings">
             <property name="text">
              <string>Image Settings...</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="0">
+          <item row="9" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
              <string>ISO</string>
             </property>
            </widget>
           </item>
-          <item row="8" column="1">
-           <widget class="QLabel" name="isoLabel">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="10" column="1">
-           <widget class="QLabel" name="shutterSpeedLabel">
-            <property name="text">
-             <string/>
-            </property>
-           </widget>
-          </item>
-          <item row="9" column="0">
+          <item row="10" column="0">
            <widget class="QLabel" name="label_6">
             <property name="text">
              <string>Image Format</string>
@@ -310,20 +303,27 @@
            </widget>
           </item>
           <item row="9" column="1">
+           <widget class="QLabel" name="isoLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="11" column="1">
+           <widget class="QLabel" name="shutterSpeedLabel">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="1">
            <widget class="QLabel" name="imageFormatLabel">
             <property name="text">
              <string/>
             </property>
            </widget>
           </item>
-          <item row="11" column="0">
-           <widget class="QLabel" name="label_10">
-            <property name="text">
-             <string>Manual Exposure</string>
-            </property>
-           </widget>
-          </item>
-          <item row="7" column="0" colspan="2">
+          <item row="8" column="0" colspan="2">
            <widget class="QGroupBox" name="groupBox">
             <property name="title">
              <string>Files</string>
@@ -366,6 +366,13 @@
             </layout>
            </widget>
           </item>
+          <item row="4" column="0" colspan="2">
+           <widget class="QCheckBox" name="ditherAfterShot">
+            <property name="text">
+             <string>Dither after each shot</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </widget>
         <widget class="QWidget" name="guider_page">
@@ -373,8 +380,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>219</width>
-           <height>294</height>
+           <width>228</width>
+           <height>301</height>
           </rect>
          </property>
          <attribute name="label">
@@ -431,7 +438,7 @@
      <x>0</x>
      <y>0</y>
      <width>955</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
