allow to choose serial shooter device

--- a/dslr-qt-shooter/ui/imagesettingsdialog.ui
+++ b/dslr-qt-shooter/ui/imagesettingsdialog.ui
@@ -75,10 +75,10 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="serialShootPort"/>
         </item>
         <item>
-         <widget class="QToolButton" name="toolButton">
+         <widget class="QToolButton" name="pickSerialShootPort">
           <property name="text">
            <string>...</string>
           </property>
