--- a/dslr-qt-shooter/ui/imagesettingsdialog.ui
+++ b/dslr-qt-shooter/ui/imagesettingsdialog.ui
@@ -38,32 +38,17 @@
        </widget>
       </item>
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QSpinBox" name="shutterSpeedManual">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="maximum">
-           <number>1024</number>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QComboBox" name="shutterSpeedManualUnit">
-          <item>
-           <property name="text">
-            <string>Seconds</string>
-           </property>
-          </item>
-          <item>
-           <property name="text">
-            <string>Minutes</string>
-           </property>
-          </item>
-         </widget>
-        </item>
-       </layout>
+       <widget class="QTimeEdit" name="shutterSpeedManual">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
+        <property name="currentSection">
+         <enum>QDateTimeEdit::SecondSection</enum>
+        </property>
+        <property name="displayFormat">
+         <string>HH:mm:ss</string>
+        </property>
+       </widget>
       </item>
       <item>
        <widget class="QLabel" name="label_3">
@@ -75,10 +60,17 @@
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
-         <widget class="QLineEdit" name="serialShootPort"/>
+         <widget class="QLineEdit" name="serialShootPort">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+         </widget>
         </item>
         <item>
          <widget class="QToolButton" name="pickSerialShootPort">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="text">
            <string>...</string>
           </property>
