--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -133,8 +133,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>219</width>
-           <height>294</height>
+           <width>228</width>
+           <height>301</height>
           </rect>
          </property>
          <attribute name="label">
@@ -168,8 +168,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>205</width>
-           <height>370</height>
+           <width>219</width>
+           <height>414</height>
           </rect>
          </property>
          <attribute name="label">
@@ -296,6 +296,9 @@
           </item>
           <item row="5" column="0" colspan="2">
            <widget class="QCheckBox" name="ditherAfterShot">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="text">
              <string>Dither after each shot</string>
             </property>
@@ -346,8 +349,11 @@
           </item>
           <item row="3" column="1">
            <widget class="QTimeEdit" name="shoot_interval">
+            <property name="enabled">
+             <bool>false</bool>
+            </property>
             <property name="currentSection">
-             <enum>QDateTimeEdit::SecondSection</enum>
+             <enum>QDateTimeEdit::HourSection</enum>
             </property>
             <property name="displayFormat">
              <string>HH:mm:ss</string>
@@ -361,8 +367,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>219</width>
-           <height>294</height>
+           <width>228</width>
+           <height>301</height>
           </rect>
          </property>
          <attribute name="label">
@@ -419,7 +425,7 @@
      <x>0</x>
      <y>0</y>
      <width>955</width>
-     <height>18</height>
+     <height>20</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
