--- a/dslr-qt-shooter/resources.qrc
+++ b/dslr-qt-shooter/resources.qrc
@@ -5,5 +5,13 @@
       <file alias="2.jpg">files/testing/2.jpg</file>
       <file alias="3.jpg">files/testing/3.jpg</file>
       <file alias="4.jpg">files/testing/4.jpg</file>
+      <file alias="5.jpg">files/testing/5.jpg</file>
+      <file alias="6.jpg">files/testing/6.jpg</file>
+      <file alias="7.jpg">files/testing/7.jpg</file>
+      <file alias="8.jpg">files/testing/8.jpg</file>
+      <file alias="9.jpg">files/testing/9.jpg</file>
+      <file alias="10.jpg">files/testing/10.jpg</file>
+      <file alias="11.jpg">files/testing/11.jpg</file>
+      <file alias="12.jpg">files/testing/12.jpg</file>
   </qresource>
 </RCC>
