--- a/dslr-qt-shooter/ui/dslr_shooter_window.ui
+++ b/dslr-qt-shooter/ui/dslr_shooter_window.ui
@@ -136,7 +136,7 @@
          <bool>true</bool>
         </property>
         <property name="currentIndex">
-         <number>2</number>
+         <number>1</number>
         </property>
         <widget class="QWidget" name="camera_info_page">
          <property name="geometry">
@@ -144,7 +144,7 @@
            <x>0</x>
            <y>0</y>
            <width>98</width>
-           <height>38</height>
+           <height>34</height>
           </rect>
          </property>
          <attribute name="label">
@@ -178,8 +178,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>281</width>
-           <height>500</height>
+           <width>198</width>
+           <height>365</height>
           </rect>
          </property>
          <attribute name="label">
@@ -257,6 +257,9 @@
           </item>
           <item row="7" column="0" colspan="2">
            <widget class="QSpinBox" name="images_count">
+            <property name="specialValueText">
+             <string>Infinite</string>
+            </property>
             <property name="suffix">
              <string> images</string>
             </property>
@@ -383,9 +386,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-
-           <width>123</width>
-           <height>76</height>
+           <width>186</width>
+           <height>355</height>
           </rect>
          </property>
          <attribute name="label">
@@ -449,7 +451,7 @@
      <x>0</x>
      <y>0</y>
      <width>955</width>
-     <height>20</height>
+     <height>18</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuCamera">
